force-app/main/default/objects/BankDenomenation__c/BankDenomenation__c.object-meta.xml
<CustomObject>
    <label>Bank Denomination</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Denominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>