force-app/main/default/objects/BankDenomenation__c/fields/AcquiredQuantity__c.field-meta.xml
<CustomField>
    <fullName>AcquiredQuantity__c</fullName>
    <label>Acquired Quantity</label>
    <summarizedField>DropDenomination__c.Quantity__c</summarizedField>
    <summaryForeignKey>DropDenomination__c.BankDenomination__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>