force-app/main/default/objects/BankDenomenation__c/fields/StartingQuantity__c.field-meta.xml
<CustomField>
    <fullName>StartingQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>