force-app/main/default/objects/BankDenomenation__c/fields/StartingValue__c.field-meta.xml
<CustomField>
    <fullName>StartingValue__c</fullName>
    <formula>StartingQuantity__c * Denomination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>