force-app/main/default/objects/BankDenomenation__c/fields/TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity__c</fullName>
    <formula>StartingQuantity__c + AcquiredQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>