force-app/main/default/objects/BankDenomenation__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <formula>( StartingQuantity__c + AcquiredQuantity__c ) * Denomination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>